--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^4.7.1",
+    "react-infinite-scroll-component": "6.1",
+    "react-router-dom": "^6.26.1",
     "zustand": "^4.3.7"
   },
   "devDependencies": {
